syntax = "proto3";

package JSONmodels;

option java_package = "world.skytale.Message";
option java_outer_classname = "Messages";



message Attachment
{
    bytes fileBytes=1;
    string fileName=2;
}
message Contact {
    bytes publicKey = 1;
    string address=2;
    string firstName =3;
    string lastName = 4;
    Attachment profilePicture=5;
}

message PublicProfile{
    Contact contact=1;
    string description=2;
    repeated string links=3;
}

message ChatMessage {
    string messageText=1;
    repeated Attachment attachments=2;
    bytes randomBytes=3;
}

